Layout ristoranti pagina home

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>DeliverBee</title>
 </head>
 
-<body>
+<body class="w-100">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
